[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccrawler"
version = "0.1.0"
description = "Recursive directory search CLI tool"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "puzzled-cat", email = "puzzledcat4092@gmail.com"}
]
license = {text = "MIT"}
keywords = ["cli", "directory", "search", "recursive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ccrawler = "ccrawler.__main__:main"

[project.urls]
Homepage = "https://github.com/puzzled-cat/ccrawler"
Repository = "https://github.com/puzzled-cat/ccrawler"